k8s/login-service/002-Deployment-sapoon-login.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sapoon-login
  labels:
    app: sapoon-login
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sapoon-login
      version: v1
  template:
    metadata:
      labels:
        app: sapoon-login
        version: v1
    spec:
      serviceAccountName: account-sapoon-login
      containers:
      - name: sapoon-login
        image: gcr.io/sapoon/sapoon-login:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: tmp
          mountPath: /tmp
      volumes:
      - name: tmp
        emptyDir: {}
