k8s/login-service/005-Virtualservice-sapoon-login.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sapoon-login
spec:
  hosts:
  - "*"
  gateways:
  - sapoon-login-gateway
  http:
  - match:
    - uri:
        prefix: /sapoon/member
    route:
    - destination:
        host: sapoon-login
        port:
          number: 8080
